--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -7,14 +7,13 @@
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-      </div>
+  <div class="clock">
+    <div class="clock-face">
+      <div class="hand hour-hand"></div>
+      <div class="hand min-hand"></div>
+      <div class="hand second-hand"></div>
     </div>
-
+  </div>
 
   <style>
     html {
@@ -62,12 +61,28 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.75, 0.6, 1)
     }
 
   </style>
 
   <script>
+    function time() {
+      let clockHands = document.querySelectorAll('.hand');
+      let d = new Date();
+      let hourDegree = 30 * d.getHours() + 90;
+      let minuteDegree = 6 * d.getMinutes() + 90;
+      let secondDegree = 6 * d.getSeconds() + 90;
 
+      clockHands[0].style.transform = `rotate(${hourDegree}deg)`;
+      clockHands[1].style.transform = `rotate(${minuteDegree}deg)`;
+      clockHands[2].style.transform = `rotate(${secondDegree}deg)`;
+    }
+
+    setInterval(time, 1000);
 
   </script>
 </body>
