feat: add array methods to data

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,28 +31,74 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const sixteenthCenturyInventors = inventors.filter(inventor => {
+      return inventor.year > 1499 && inventor.year < 1600;
+    })
+
+    console.log(sixteenthCenturyInventors);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const inventorNames = inventors.map(inventor => {
+      return `${inventor.first} ${inventor.last}`;
+    })
+
+    console.log(inventorNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const birthyearSortedInventors = inventors.sort((a, b) => {
+      return a.year > b.year ? 1 : -1;
+    });
+
+    console.log(birthyearSortedInventors);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const inventorsAgeSum = inventors.reduce((accumulator, currentInventor) => {
+      return accumulator += (currentInventor.passed - currentInventor.year)
+    }, 0);
+
+    console.log(inventorsAgeSum);
 
     // 5. Sort the inventors by years lived
+    const ageSortedInventors = inventors.sort((a,b) => {
+      return ((a.passed - a.year) < (b.passed - b.year)) ? 1 : -1;
+    });
+
+    console.log(ageSortedInventors);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    const boulevards = Array.from(document.querySelectorAll(".mw-category-group a"));
 
+    const deBoulevards = boulevards
+      .map(boulevard => boulevard.innerText)
+      .filter(boulevard => boulevard.includes('de'));
+
+    console.log(deBoulevards);
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const lastNameSortedPeople = people.sort((a, b) => {
+      const [aLast] = a.split(',');
+      const [bLast] = b.split(',');
+      return aLast > bLast ? 1 : -1;
+    });
+
+    console.log(lastNameSortedPeople);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const sumInstanceObj = data.reduce((accumulator, currentDP) => {
+      if (!accumulator[currentDP]) accumulator[currentDP] = 1;
+      else accumulator[currentDP]++;
+      return accumulator;
+    }, {});
+
+    console.log(sumInstanceObj);
 
   </script>
 </body>
